# taskturbine

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release-python.yml  release-rust.yml
demo-app/: Cargo.toml
demo-app/migrations/: 0001_initial.sql
demo-app/src/: db.rs  main.rs  server.rs  tasks.rs  worker.rs
demo-app/templates/: home.html  layout.html  process-register.html  register.html  verify-failed.html  verify-success.html
examples/python-demo/: main.py  pyproject.toml  testapp.py  testappasync.py
examples/rust-demo/: Cargo.toml
examples/rust-demo/migrations/: 0001_initial.sql
examples/rust-demo/src/: db.rs  server.rs  tasks.rs  worker.rs
taskturbine-app/: Cargo.toml  README.md
taskturbine-app/src/: app.rs  config.rs  context.rs  lib.rs  metrics.rs  testutils.rs
taskturbine-cli/: Cargo.toml  README.md
taskturbine-cli/src/: admin_storage.rs  cancel.rs  cleanup.rs  cleanup_event.rs  cleanup_task.rs  clear.rs  demo.rs  emit_event.rs  formatters.rs  main.rs  migrate.rs  run_get.rs  run_list.rs  scheduler.rs  spawn.rs  task_cancel.rs  task_get.rs  task_list.rs  task_spawn.rs  upkeep.rs
taskturbine-core/: Cargo.toml  README.md
taskturbine-core/migrations/: 0001_initial-schema.sql  0002_scheduler_storage.sql
taskturbine-core/src/: api.rs  app.rs  config.rs  context.rs  lib.rs  models.rs  storage.rs  testutils.rs
taskturbine-python/: Cargo.toml  README.md  pyproject.toml
taskturbine-python/python/: demo.py  testapp.py  testappasync.py
taskturbine-python/python/taskturbine/: __init__.py  async.py  asynclib.py  context.py  demo.py  metrics.py  models.py  serializer.py  taskturbine.pyi  worker.py
taskturbine-python/python/tests/: conftest.py  demo.py  test_app.py  test_asynccontext.py  test_asynclib.py  test_asyncworker.py  test_config.py  test_context.py  test_worker.py
taskturbine-python/src/: asynclib.rs  blockingstorage.rs  config.rs  lib.rs  models.rs
