[workspace]
resolver = "3"
members = [ "taskturbine-cli","taskturbine-core"]

[workspace.dependencies]
chrono = "0.4.42"
figment = "0.10.19"
log = "0.4.28"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v7"] }
