[package]
name = "demo-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[dependencies]
axum = "0.8.7"
log.workspace = true
minijinja = { version = "2.14.0", features = ["builtins", "loader"] }
serde = "1.0.228"
serde_json.workspace = true
simple_logger = "5.1.0"
sqlx = { workspace = true, features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
taskturbine-core = { path = "../taskturbine-core" }
tokio.workspace = true
