[package]
name = "taskturbine-cli"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
chrono.workspace = true
clap = { version = "4.0", features = ["derive"] }
taskturbine-core = { path = "../taskturbine-core" }
tokio = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
simple_logger = "5.1.0"
uuid.workspace = true
sql = "0.4.3"
sqlx.workspace = true
