[package]
name = "taskturbine-cli"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Command line tools for interacting with a taskturbine application."

[dependencies]
chrono.workspace = true
clap = { version = "4.0", features = ["derive"] }
taskturbine = { version = "~0.1.0", path = "../taskturbine-app" }
taskturbine-core = {
    version = "~0.1.0",
    path = "../taskturbine-core",
    features = ["test"]
}
tokio = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
simple_logger = "5.1.0"
uuid.workspace = true
sqlx.workspace = true
colored = "3.1.1"
toml = "1.1.2"
serde = "1.0.228"
elegant-departure = { version = "0.3.2", features = ["tokio"] }
cron = "0.16.0"
