[package]
name = "taskturbine-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
figment = { workspace = true }
futures = "0.3.31"
log = { workspace = true }
rand = "0.9.2"
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
tokio = { workspace = true }
uuid = { workspace = true }
