[package]
name = "taskturbine-core"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "The core storage API and structs used for taskturbine clients."
repository = "https://github.com/markstory/taskturbine"

[dependencies]
async-channel = "2.5.0"
chrono = { workspace = true }
elegant-departure = { version = "0.3.2", features = ["tokio"] }
figment = { workspace = true }
futures = "0.3.32"
log = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
tokio = { workspace = true }
uuid = { workspace = true }

[features]
test = []
