[package]
name = "taskturbine-python"
version = "0.1.0"
edition = "2024"

[lib]
name = "taskturbine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["abi3-py312"] }
taskturbine-core = { version = "0.1.0", path = "../taskturbine-core" }
tokio.workspace = true
uuid.workspace = true
