[package]
name = "taskturbine-python"
version = "0.1.1"
edition = "2024"

[lib]
name = "taskturbine"
crate-type = ["cdylib"]

[dependencies]
chrono.workspace = true
pyo3 = { version = "^0.28.0", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
taskturbine-core = { version = "~0.1.0", path = "../taskturbine-core" }
tokio.workspace = true
uuid.workspace = true
