[project]
name = "taskturbine-python"
version = "0.1.0"
requires-python = ">3.13"
dependencies = [
    "maturin==1.3.0",
    "tomli==2.0.1",
]

[dependency-groups]
dev = [
    "maturin[patchelf]>=1.3.0",
    "black",
    "mypy",
    "isort",
    "pip",
    "pytest",
    "psycopg2-binary",
    "types-psycopg2",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["python/tests"]

[tool.mypy]
mypy_path = "python"
files = ["python"]
show_error_codes = true
strict = true
