[project]
name = "taskturbine-python"
version = "0.1.0"
requires-python = ">3.13"
license = "Apache-2.0"
dependencies = [
    "maturin==1.3.0",
    "tomli==2.0.1",
]

[dependency-groups]
dev = [
    "maturin[patchelf]>=1.3.0",
    "mypy",
    "pip",
    "pytest",
    "pytest-asyncio",
    "psycopg2-binary",
    "types-psycopg2",
    "ruff>=0.15.1",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["python/tests"]

[tool.mypy]
mypy_path = "python"
files = ["."]
show_error_codes = true
strict = true
