[package]
name = "rust-demo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[dependencies]
axum = "0.8.7"
chrono.workspace = true
hex = "0.4.3"
hmac = "0.12.1"
log.workspace = true
minijinja = { version = "2.14.0", features = ["builtins", "loader"] }
serde = "1.0.228"
serde_json.workspace = true
sha2 = "0.10.9"
simple_logger = "5.1.0"
sqlx = { workspace = true, features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
taskturbine-core = { path = "../../taskturbine-core" }
tokio.workspace = true
